[project]
name = "comfyui-tooling-nodes"
description = "Provides nodes and server API extensions geared towards using ComfyUI as a backend for external tools."
version = "1.1.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/ionflow/comfyui-tooling-nodes"

[tool.black]
line-length = 100
preview = true

[tool.comfy]
PublisherId = "ionflow"
DisplayName = "comfyui-tooling-nodes"
Icon = ""
